# cmake_cross_platform

./: CMakeLists.txt  README.md
.github/workflows/: ccpp.yml  cpp.yml
cmake_cross_platform/: CMakeLists.txt  Either.h  cmake_cross_platform  cmake_cross_platform.cpp  cmake_cross_platform.h  testfile.cpp  testfile.h
